# my-phones

./: Bucket.cpp  Bucket.hpp  CMakeLists.txt  Hash.cpp  Hash.hpp  InvertedIndexList.cpp  InvertedIndexList.hpp  Makefile  README.md  Record.cpp  Record.hpp  RecordPointer.cpp  RecordPointer.hpp  TownNode.cpp  TownNode.hpp  Triple.hpp  Verify.c  main.cpp  operationsfile.txt  operationsfile_1.txt  operationsfile_output.txt  t200_phones.txt
hash/: Bucket.cpp  Bucket.hpp  Hash.cpp  Hash.hpp
inverted_index/: InvertedIndexList.cpp  InvertedIndexList.hpp  RecordPointer.cpp  RecordPointer.hpp  TownNode.cpp  TownNode.hpp  Triple.cpp
python/: validator.py
record/: Record.cpp  Record.hpp  myRecord.hpp
